src/main/java/org/example/EasyScript.g4
grammar EasyScript ;

@header{
package org.example;
}

start : expr EOF ;
expr : left=expr '+' right=expr #AddExpr
     | literal                  #LiteralExpr
     ;
literal : INT | DOUBLE ;

fragment DIGIT : [0-9] ;
INT : DIGIT+ ;
DOUBLE : DIGIT+ '.' DIGIT+ ;

// skip all whitespace
WS : (' ' | '\r' | '\t' | '\n' | '\f')+ -> skip ;
